...
    "email": "Correo electrónico",
    "password": "Contraseña",
    "password2": "Confirmar contraseña",
    "connectWithUs": "Conéctate con nosotros",
    "signUpMsg": "Regístrate para unirte a nuestra comunidad",
    "signUp": "Regístrate",
    "redirectSignIn": "¿Ya tienes una cuenta? Inicia sesión",
    "rights": "Todos los derechos reservados.",

    "nameRequired": "El nombre es obligatorio",
    "lastnameRequired": "El apellido es obligatorio",
    "usernameRequired": "El nombre de usuario es obligatorio",
    "emailRequired": "El correo es obligatorio",
    "invalidEmail": "Ingresa un correo válido",
    "passwordRequired": "La contraseña es obligatoria",
    "passwordMinLength": "La contraseña debe tener al menos 6 caracteres",
    "confirmPasswordRequired": "La confirmación de contraseña es obligatoria",
    "passwordsDoNotMatch": "Las contraseñas no coinciden",
    "connectionError": "Error de conexión: {error}",
    "tokenNotReceived": "No se recibió un token válido",

    "sign_in": "Iniciar sesión",
    "welcome": "¡Bienvenido!",
    "credentials": "Introduzca sus credenciales",
    "email": "Correo electrónico",
    "password": "Contraseña",
    "redirect_sign_up": "¿Aún no tienes una cuenta? Registrarse",
    "rights": "© 2025 AdrenaLux. Todos los Derechos Reservados",

    "sign_up": "Registrarse",
    "connect_with_us": "¡Conecta con nosotros!",
    "sign_up_msg": "Regístrate para comenzar a jugar",
    "name": "Nombre",
...
